# CLI

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  Updated Curl (Fix for Formatting)  access.c  access.h  ams.c  ams.h  program.c
libs/cJSON/: Makefile
libs/ctable/: Makefile  README.md
